--- a/new-project/cardapio/page.html
+++ b/new-project/cardapio/page.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardapio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</head>
+
+  </head>
 <body>
-  <div class="btn-group" role="group" aria-label="Basic example">
+
+   <div class="btn-group" role="group" aria-label="Basic example">
     <button  onclick="window.location.href='../menu/page.html'"      type="button" class="btn btn-dark">menu</button>
     <button  onclick="window.location.href='../pedido/page.html'"    type="button" class="btn btn-dark">pedido</button>
     <button  onclick="window.location.href='../cardapio/page.html'"   type="button" class="btn btn-dark">cardapio</button>
-  </div>
+   </div>
   
  <div class="a1">
     <h1>Cardapio</h1>
@@ -24,40 +29,40 @@
         <div class="card" style="width: 18rem;">
             <img width="300px" height="200px" src="../images/bauru.jpg" class="card-img-top" alt="prato 01">
             <div class="card-body">
-              <h5 class="card-title">bauru</h5>
+              <h5 class="card-title">Bauru</h5>
               <p class="card-text">R$ 7,00</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img width="300px" height="200px" src="../images/misto-quente-.jpeg" class="card-img-top" alt="Prato 02">
             <div class="card-body">
-              <h5 class="card-title">misto quente</h5>
+              <h5 class="card-title">Misto quente</h5>
+              <p class="card-text">R$ 5,00</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/torta de frango.jpg" class="card-img-top" alt="Prato 03">
+            <div class="card-body">
+              <h5 class="card-title">Torta de frango</h5>
               <p class="card-text">R$ 6,00</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../images/coxinha.jpg" class="card-img-top" alt="Prato 03">
+            <img width="300px" height="195px" src="../images/enroladinho de salsicha.webp" class="card-img-top" alt="Prato 03">
             <div class="card-body">
-              <h5 class="card-title">coxinha</h5>
-              <p class="card-text">R$ 4,00</p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../images/kibe.jpeg" class="card-img-top" alt="Prato 03">
-            <div class="card-body">
-              <h5 class="card-title">kibe</h5>
+              <h5 class="card-title">Enroladinho de salsicha</h5>
               <p class="card-text">R$ 4,50</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
             <img width="300px" height="200px" src="../images/esfiha.jpg" class="card-img-top" alt="Prato 03">
             <div class="card-body">
-              <h5 class="card-title">esfiha</h5>
+              <h5 class="card-title">Esfiha</h5>
               <p class="card-text">R$ 5,00</p>
             </div>
           </div>
     </div>
-    <h2>Cafes</h2>
+    <h2>Cafés</h2>
     <div class="wrap-card">
         <div class="card" style="width: 18rem;">
             <img width="300px" height="200px" src="../images/achocolatado.jpeg" class="card-img-top" alt="...">
@@ -95,27 +100,41 @@
             </div>
           </div>
     </div>
-    <h2>Sobremesas</h2>
+    <h2>Doces</h2>
     <div class="wrap-card">
         <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../imagens/Torta-morango.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/Torta-morango.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Torta de morango</h5>
               <p class="card-text">R$25,50</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../imagens/pudim de leite.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/pudim de leite.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pudim de leite</h5>
               <p class="card-text">R$30,50</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../imagens/tiramisu.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/tiramisu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Tiramissu</h5>
               <p class="card-text">R$16,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/brownie de chocolate.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Brownie</h5>
+              <p class="card-text">R$9,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="175px" src="../images/bolo-de-chocolate.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bolo de chocolate com creme de café</h5>
+              <p class="card-text">R$12,50</p>
             </div>
           </div>
     </div>
