--- a/new-project/pedido/page.html
+++ b/new-project/pedido/page.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </head>
 <body>
     <div id="error" class="error-model">
@@ -15,53 +15,61 @@
         <button onclick="fechar()">entendi!!!</button>
     </div>
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button  onclick="window.location.href='../menu/page.html'"      type="button" class="btn btn-dark">menu</button>
-      <button  onclick="window.location.href='../pedido/page.html'"    type="button" class="btn btn-dark">pedido</button>
-      <button  onclick="window.location.href='../cardapio/page.html'"   type="button" class="btn btn-dark">cardapio</button>
+      <button  onclick="window.location.href='../menu/page.html'"      type="button" class="btn btn-light">menu</button>
+      <button  onclick="window.location.href='../pedido/page.html'"    type="button" class="btn btn-light">pedido</button>
+      <button  onclick="window.location.href='../cardapio/page.html'"   type="button" class="btn btn-light">cardapio</button>
     </div>
       <h1>Pedido</h1>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nome</label>
         <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="insira seu nome">
       </div>
-      <button  type="button" class="btn btn-outline-dark" onclick="começar()">começar</button>
+      <button  type="button" class="btn btn-outline-light" onclick="comecar()">começar</button>
 
-      <div id="selects-dic">
+      <div id="selects-div">
             <h2>Olá,  <span id="nomeprint"> vamos começar o seu pedido</span></h2>
 
-            <h2>Pratos</h2>
-            <select class="form-select" aria-label="Default select example"  id="select prato"> 
-              <option selected>selecione um prato</option>
-              <option value="1">Prato feito</option>
-              <option value="2">Prato de strogonoff</option>
-              <option value="3">Prato vegano</option>
+            <h2>Lanches</h2>
+            <select class="form-select" aria-label="Default select example"  id="selectprato"> 
+              <option selected>Selecione um lanche</option>
+              <option value="Bauru">Bauru</option>
+              <option value="Misto quente">Misto quente</option>
+              <option value="Torta de frango">Torta de frango</option>
+              <option value="Enroladinho de salsicha">Enroladinho de salsicha</option>
+              <option value="Esfiha">Esfiha</option>
             </select>
 
-            <h2>bebidas</h2>
-            <select class="form-select" aria-label="Default select example" id="select bebida">
-              <option selected>selecione uma bebida</option>
-              <option value="1">agua</option>
-              <option value="2">refrigerante</option>
-              <option value="3">suco de laranja</option>
+            <h2>Cafés</h2>
+            <select class="form-select" aria-label="Default select example" id="selectbebida">
+              <option selected>Selecione um café</option>
+              <option value="Achocolatado">Achocolatado</option>
+              <option value="Expresso">Expresso</option>
+              <option value="Capuccino">Capuccino</option>
+              <option value="Mancchiato">Macchiato</option>
+              <option value="Irish coffee">Irish coffee</option>
             </select>
 
-            <h2>sobremesas</h2>
-            <select class="form-select" aria-label="Default select example" id="select sobremesa">
-              <option selected>selecione uma sobremesa</option>
-              <option value="1">torta de morango</option>
-              <option value="2">Pudim</option>
-              <option value="3">tiramissu</option>
+            <h2>Doces</h2>
+            <select class="form-select" aria-label="Default select example" id="selectsobremesa">
+              <option selected>Selecione um doce</option>
+              <option value="Torta de morango">Torta de morango</option>
+              <option value="Pudim de leite">Pudim de leite</option>
+              <option value="Tiramissu">Tiramissu</option>
+              <option value="Brownie">Brownie</option>
+              <option value="Bolo de chocolate com creme de café">Bolo de chocolate com creme de café</option>
             </select>
 
            <div class="a1">
-         <button class="btn btn-sucess" type="button" onclick="calculartotal()">fazer pedido</button>
-         <button class="btn btn-sucess" type="button" onclick="limpar()">limpar</button>
+         <button class="btn btn-outline-light" type="button" onclick="calculartotal()">fazer pedido</button>
+         <button class="btn btn-outline-light" type="button" onclick="limpar()">limpar</button>
            </div>
            
           <div>
           <span class="badge bg-primary">total:</span>
-          <span class="badge bg-secondary" id="resultadox'"></span>
+          <span class="badge bg-secondary" id="resultado"></span>
            </div>
+
+          
 
      </div>
   </body>
