--- a/new-project/cardapio/page.html
+++ b/new-project/cardapio/page.html
@@ -100,7 +100,45 @@
             </div>
           </div>
     </div>
-    <h2>Doces</h2>
+    <h2>Sucos</h2>
+    <div class="wrap-card">
+        <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/suco de laranja.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suco de laranja</h5>
+              <p class="card-text">R$25,50</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/suco de uva.jpeg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suco de uva</h5>
+              <p class="card-text">R$30,50</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/suco de abacaxi.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suco de abacaxi</h5>
+              <p class="card-text">R$16,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/suco de limao.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suco de limão</h5>
+              <p class="card-text">R$9,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="175px" src="../images/suco de maracuja.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Suco de maracujá</h5>
+              <p class="card-text">R$12,50</p>
+            </div>
+          </div>
+    </div>
+    <h2>Bolos e tortas</h2>
     <div class="wrap-card">
         <div class="card" style="width: 18rem;">
             <img width="300px" height="200px" src="../images/Torta-morango.jpg" class="card-img-top" alt="...">
@@ -110,23 +148,23 @@
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../images/pudim de leite.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/bolo de leite ninho.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Pudim de leite</h5>
+              <h5 class="card-title">Bolo de leite ninho</h5>
               <p class="card-text">R$30,50</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../images/tiramisu.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/bolo de fuba.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Tiramissu</h5>
+              <h5 class="card-title">Bolo de fuba</h5>
               <p class="card-text">R$16,80</p>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
-            <img width="300px" height="200px" src="../images/brownie de chocolate.jpg" class="card-img-top" alt="...">
+            <img width="300px" height="200px" src="../images/torta de uva.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Brownie</h5>
+              <h5 class="card-title">Torta de uva</h5>
               <p class="card-text">R$9,80</p>
             </div>
           </div>
@@ -138,6 +176,44 @@
             </div>
           </div>
     </div>
+    <h2>Fondue de queijo</h2>
+     <div class="wrap-card">
+        <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/tomate cereja.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Tomate cereja</h5>
+              <p class="card-text">R$10,50</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/batatas picadas.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Batatas</h5>
+              <p class="card-text">R$13,50</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/filet mignon.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cubos de filé mignon</h5>
+              <p class="card-text">R$16,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="200px" src="../images/cubos de cenoura.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cenoura</h5>
+              <p class="card-text">R$8,80</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img width="300px" height="175px" src="../images/cubos de presunto.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Cubos de presuntos</h5>
+              <p class="card-text">R$8,50</p>
+            </div>
+          </div>
+     </div>
     </div>
 </body>
 </html>
