--- a/new-project/pedido/page.html
+++ b/new-project/pedido/page.html
@@ -49,15 +49,36 @@
               <option value="Irish coffee">Irish coffee</option>
             </select>
 
-            <h2>Doces</h2>
+            <h2>Sucos</h2>
+            <select class="form-select" aria-label="Default select example" id="selectsobremesa">
+              <option selected>Selecione um doce</option>
+              <option value="suco de laranja">suco de laranja</option>
+              <option value="suco de uva">suco de uva</option>
+              <option value="suco de abacaxi">suco de abacaxi</option>
+              <option value="suco de limao">suco de limao</option>
+              <option value="suco de maracujá">suco de maracuja</option>
+            </select>
+
+           <h2>Bolos e tortas</h2>
             <select class="form-select" aria-label="Default select example" id="selectsobremesa">
               <option selected>Selecione um doce</option>
               <option value="Torta de morango">Torta de morango</option>
-              <option value="Pudim de leite">Pudim de leite</option>
-              <option value="Tiramissu">Tiramissu</option>
-              <option value="Brownie">Brownie</option>
+              <option value="Bolo de leite ninho">Bolo de leite ninho</option>
+              <option value="Bolo de fuba">Bolo de fuba</option>
+              <option value="Torta de uva">Torta de uva</option>
               <option value="Bolo de chocolate com creme de café">Bolo de chocolate com creme de café</option>
             </select>
+
+            <h2>Fondue de queijo</h2>
+            <select class="form-select" aria-label="Default select example" id="selectsobremesa">
+              <option selected>Selecione um doce</option>
+              <option value="Tomate cereja">Tomate cereja</option>
+              <option value="Batatas">Batatas</option>
+              <option value="Cubos de filé mignon">Cubos de filé mignon</option>
+              <option value="Cenoura">Cenoura</option>
+              <option value="Cubos de presunto">Cubos de presunto</option>
+            </select>
+
 
            <div class="a1">
          <button class="btn btn-outline-light" type="button" onclick="calculartotal()">fazer pedido</button>
